<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="120dp"
    android:padding="10dp"
    android:id="@+id/layoutInfoList">

    <ImageView
        android:id="@+id/imageInfoGambar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imageinfo" />

    <TextView
        android:id="@+id/textInfoJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judulinfo"
        android:padding="5dp"
        android:layout_toEndOf="@+id/imageInfoGambar"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/textInfoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:layout_below="@id/textInfoJudul"
        android:padding="5dp"
        android:textSize="12sp"
        android:layout_toEndOf="@+id/imageInfoGambar" />

    <Button
        android:id="@+id/buttonInfoDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageInfoGambar"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_circle_red"
        android:text="@string/delete"
        android:textColor="#fff" />



</RelativeLayout>