<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutListDiscussion"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageDiscussionProfile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="5dp"
        android:src="@mipmap/ic_launcher_round"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearDicussionLayout"
        android:layout_toEndOf="@+id/imageDiscussionProfile"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textDiscussionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/textDiscussionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="12sp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textDiscussionJurusan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jurusan"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        android:layout_below="@id/linearDicussionLayout"
        android:layout_toEndOf="@+id/imageDiscussionProfile"
        android:layout_marginStart="5dp"/>
    <TextView
        android:id="@+id/textDiscussionIsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:layout_below="@id/textDiscussionJurusan"
        android:padding="5dp"
        android:layout_toEndOf="@+id/imageDiscussionProfile"/>

</RelativeLayout>