<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressbarHomeLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/textNoDataAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_ada_info_silahkan_tambahkan"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageAccountProfilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textAccountNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#111"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textAccountJurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jurusan"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textAccountEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textAlignment="center"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4d000000"/>
        <TextView
            android:id="@+id/textAccountManagePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_post"
            android:textStyle="bold"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swipeHomeRefresh">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerAccountManagePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAccountAddpost"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_add"
        android:layout_margin="16dp"/>

</RelativeLayout>