<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_diskusi"
            android:textAlignment="center"
            android:padding="10dp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddPostPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:padding="10dp">
            <EditText
                android:id="@+id/etAddDiscussionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:hint="@string/apa_yang_kamu_pikirkan"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btnAddDiscussionBatal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle_red"
                android:text="@string/batal"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/btnAddDiscussionTambah"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle_yellow"
                android:text="@string/tambah_diskusi"
                android:textColor="#000"/>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>